# Gentropy-manuscript

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.sh
chapters/: paper_colocalisation_analysis.ipynb  paper_pleiotropy_analysis.ipynb
chapters/CHEMBL_drug_target_enrichment/: 06_novel_known_CHEMBL_enrich.ipynb  07_trans_pQTLs_CHEMBL_enrich.ipynb  08_old_new_l2g_CHEMBL_enrich.ipynb  09_feature_based_evidence_CHEMBL_enrich.ipynb  10_rare_common_big_small_beta_CHEMBL_enrich.ipynb
chapters/CS_to_gene_prioritisation_table/: 01c_the_list_of_assosiated_genes.ipynb
chapters/EGL_and_training_set/: 01_EGL_preparation.ipynb  02_training_set.ipynb
chapters/FDR_of_L2G_and_naive/: 03_using_training_set_for_FDR.ipynb
chapters/colocalisation/: paper_colocalisation_analysis.ipynb
chapters/descriptive_numbers_for_paper/: 02_descriptive_numbers_si_vi_fm.ipynb
chapters/functional_genomics_feature_input/: 01.data_preparation.ipynb
chapters/gene_saturation/: Gene_saturation.ipynb
chapters/in_silico_effect_prediction/: 01.1_computed_maf_qc.ipynb  01.2_rescaled_beta_qc.ipynb  01.3_credible_set_size_qc.ipynb  01.4_study_type_qc.ipynb  01_lead_variant_effect_dataset_preparation.ipynb  01_prepare_data.ipynb  01a_maf_exploratory_analysis.ipynb  02_filtering.ipynb  02_variance_explained.ipynb  03_filtering.ipynb  03_regression.ipynb  04_variant_classification_by_freq.ipynb  04_variant_functional_consequence.ipynb  05.0_explore_Epiraction_dataset.ipynb  05.1_variant_regulatory_consequence.ipynb  05_maf_vs_est_beta.ipynb  05_variant_regulatory_consequence.ipynb  06a_correlation_between_sample_size_and_maf.ipynb  07_known_vs_novel.ipynb  08_variant_effect_prediciton_piecharts.ipynb  10_variant_effect_in_maf_beta.ipynb  13_vep_assessment_breakdown.ipynb  14_size_of_cs.ipynb  15_so_terms.ipynb  16_maf_lead_variant.ipynb  _03-plots.ipynb  _06_maf_vs_cs_size.ipynb  rolling_window.ipynb
chapters/in_silico_effect_prediction/epiraction_scores.parquet/: .part-00000-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00001-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00002-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00003-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00004-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00005-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00006-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00007-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  .part-00008-7f6cd451-6f3d-4aa1-ab57-389ab672518f-c000.snappy.parquet.crc  (+25 more)
chapters/leave_one_group_in_analysis/: conditional_analysis.ipynb
chapters/pleiotropy/: gene_pleiotropy_analysis.ipynb  paper_gene_pleiotropy_analysis.ipynb  paper_pleiotropy_analysis.ipynb  variant_pleiotropy_analysis.ipynb
chapters/replicated_and_novel_CS/: 01b_the_list_of_repicated_CS.ipynb  04_defining_novel_and_known_l2g_predictions.ipynb
chapters/study_characterisation/: study_characterisation.ipynb
chapters/study_gene_disease/: overtime.ipynb
chapters/variant_effect_prediction/: 01_prepare_data.ipynb  02_variance_explained.ipynb  03-plots.ipynb  03_filtering.ipynb  04_variant_classification_by_freq.ipynb  05_maf_vs_est_beta.ipynb  06_maf_vs_cs_size.ipynb  07_known_vs_novel.ipynb  08_variant_effect_prediciton_piecharts.ipynb  09_variant_index.ipynb  09_variant_per_chromosome.ipynb  10_variant_effect_in_maf_beta.ipynb  11_chromosome_lenghts.ipynb  12_maf.ipynb  notebook.ipynb
data/: qsl_pleiotropy_table.ipynb  qualifying_dataset_generation.ipynb
src/manuscript_methods/: __init__.py  conftest.py  consequence.py  datasets.py  ld_populations.py  locus_statistics.py  maf.py  rescaled_beta.py  study_statistics.py  tc.py  variant_statistics.py  variant_type.py  ve.py
src/manuscript_methods/datasets/: maf_dataset.py
(+64 files in other folders)
