[project]
name = "gentropy-manuscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gentropy>=2.2.0",
    "ipython>=9.0.2",
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "pre-commit>=4.2.0",
    "rpy2>=3.5.17",
    "ruff>=0.11.7",
]
[tool.ruff.lint]
select = ["D", "I", "E"]
ignore = [
    "E501",    # line too long
    "E731",    # do not assign a lambda expression, use a def
    "PLC0208", # Use a sequence type instead of a `set` when iterating over values
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments to function call ({c_args} > {max_args})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "PLW2901", # Outer {outer_kind} variable {name} overwritten by inner {inner_kind} target
    "UP006",   # keep type annotation style as is
    "UP007",   # keep type annotation style as is
    "UP038",   # Use `X | Y` in `isinstance` call instead of `(X, Y)`
    "D107",    # Ignore missing docstring in __init__
    "D101",    # Missing docstring in public class
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
